<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:text=""
        android:textSize="30sp"
        android:gravity="bottom|end"
        android:paddingRight="5dp"
        android:background="@color/white"
        />

    <View
        android:layout_width="370dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:background="#dee2e6"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:background="@color/white"
        >

        <Button
            android:id="@+id/num7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num7"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/num8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num8"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/num9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num9"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onDigit"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="/"
            android:textColor="@color/operatorColor"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onOperator"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:background="@color/white"
        >

        <Button
            android:id="@+id/num4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num4"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/num5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num5"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/num6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num6"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/multiply"
            android:textColor="@color/operatorColor"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onOperator"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:background="@color/white"
        >

        <Button
            android:id="@+id/num1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num1"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/num2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num2"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/num3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num3"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:textColor="@color/operatorColor"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onOperator"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:background="@color/white"

        >

        <Button
            android:id="@+id/modulo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Modulo"
            android:textColor="@color/operatorColor"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onOperator"
            />
        <Button
            android:id="@+id/num0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num0"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onDigit"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="."
            android:textColor="@color/operatorColor"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onDecimal"
            />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/addition"
            android:textColor="@color/operatorColor"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onOperator"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:background="@color/white"
        >


        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/equals"
            android:textColor="@color/operatorColor"
            android:textSize="25sp"
            android:layout_weight="3"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onEquals"
            />
        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:textColor="@color/operatorColor"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:onClick="onClear"
            />


    </LinearLayout>

</LinearLayout>